deploy/k8s/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-website-${NAMESPACE}
  labels:
    app: my-website-${NAMESPACE}
  namespace: my-website-${NAMESPACE}
spec:
  ports:
    - port: 80
  selector:
    app: my-website-${NAMESPACE}
    tier: frontend
  type: NodePort
