deploy/k8s/01_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-website-${NAMESPACE}
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  namespace: my-website-${NAMESPACE}
spec:
  tls:
  - hosts:
    - ${ENV_URL}
    secretName: my-website-${NAMESPACE}-tls-secret
  rules:
    - host: ${ENV_URL}
      http:
        paths:
          - path: /
            backend:
              serviceName: my-website-${NAMESPACE}
              servicePort: 80
